# django-modulith

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  roadmap.md
.github/workflows/: python-package.yml
contributing/: index.html
docs/: index.md  reference.md
reference/: index.html
search/: search_index.json
src/django_modulith/: interface_registry.pyi
tests/: interface_generator.py  manage.py  test_generatestubs.py  test_importlinter_command.py  test_interface_registry.py
tests/django_modulith_test/: asgi.py  settings.py  urls.py  wsgi.py
tests/test_modulith/: apps.py  modulith.py
