[project]
name = "django-modulith"
version = "0.1.1"
description = ""
authors = [
    {name = "Plamen Tarkalanov",email = "plamen.tarkalanov@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
]
packages = [
    { include = "django_modulith", from = "src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.10.0"
pytest = "^8.3.5"
django-stubs = "^5.1.3"
pytest-django = "^4.10.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.0.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
griffe = "<1.0.0"
